<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">aperi</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Send</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">Self</string>
    <string name="label_peers">Peers</string>
    <string name="label_group">Group Owner</string>
    <string name="toggle_client">Client</string>
    <string name="toggle_group">GrpOwn</string>
    <string name="label_macip">MAC &#8212; IP List</string>
    <string name="refresh_macip_list_button">Refresh MAC &#8212; IP List Manually</string>
</resources>
