<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:background="?android:attr/activatedBackgroundIndicator"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="6dip"
    android:weightSum="10" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_marginRight="2dip"
        android:layout_weight="1"
        android:contentDescription="@string/empty"
        android:src="@drawable/machine" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="2" >

        <TextView
            android:id="@+id/device_name"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/device_details"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:singleLine="true" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/row_device_connection_type"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:textOff="@string/toggle_client"
        android:textOn="@string/toggle_group" />

    <Button
        android:id="@+id/row_device_connect"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:text="@string/connect_peer_button" />

    <Button
        android:id="@+id/row_device_disconnect"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="3.75"
        android:text="@string/disconnect_peer_button"
        android:visibility="gone" />

    <Button
        android:id="@+id/row_send_file"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="2.25"
        android:text="@string/get_file_button"
        android:visibility="gone" />

</LinearLayout>